--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.13.5",
     "express": "^5.2.1",
     "mongoose": "^9.1.5"
   },
@@ -13,6 +14,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
-  "devDependencies": {}
+  "type": "module"
 }
